Update pom and clean code